# bomberclone

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in
data/: Makefile.am  Makefile.in
data/gfx/: Makefile.in
data/maps/: Makefile.in
data/music/: Makefile.in
data/pixmaps/: Makefile.in
data/player/: Makefile.in
data/tileset/: Makefile.in
data/tileset/farm/: Makefile.in
debian/: README.Debian  bomberclone.doc-base.EX  bomberclone.prerm.debhelper  bomberclone.substvars  changelog  control  copyright  dirs  files  menu  rules
include/: Makefile.in  basic.h  bomb.h  bomberclone.h  broadcast.h  chat.h  flyingitems.h  font.h  gfx.h  keyb.h  keybinput.h  map.h  menu.h  menugui.h  network.h  ogcache-client.h  packets.h  player.h  single.h  sound.h  sysfunc.h  udp.h
src/: Makefile.MINGW  Makefile.MINGW.FreeBSD  Makefile.OSX  Makefile.am  Makefile.in  bc-res.rc  bomb.c  broadcast.c  chat.c  configuration.c  debug.c  field.c  flyingitems.c  font.c  game.c  gfx.c  gfxengine.c  gfxpixelimage.c  help.c  keyb.c  keybinput.c  main.c  map.c  mapmenu.c  menu.c  menubools.c  menubuttons.c  menuentrys.c  menuimages.c  menulabels.c  menulists.c  multiwait.c  netmenu.c  netsrvlist.c  network.c  ogcache-client.c  packets.c  pkgcache.c  player.c  playerinput.c  (+7 more)
tools/: convert-bomb.sh  convert-fire.sh  convert-player.sh  convert-respawn.sh  convert-sick.sh  convert-singleframe.sh  convert-stone.sh  cross-configure.sh  cross-cpp.sh  cross-make.sh  cross-mingw32-linux.sh  cross-strip.sh  indent.sh
(+14 files in other folders)
